# rorqual

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  pyproject.toml  release_notes.md  requirements.txt  rorqual.py
.github/workflows/: check.yml  release.yml
aur/: PKGBUILD.template  rorqual
rorqual/: __main__.py  app.py  callbacks.py  config.py  cover_manager.py  mpris.py  stream_manager.py  subsonic_client.py  subsonic_player.py
rorqual/ui/: album_tree.py  playback_progress.py  playlist.py  themes.py
src/rorqual/: __main__.py  app.py  caching.py  callbacks.py  config.py  cover_manager.py  media_library.py  mpris.py  stream_manager.py  subsonic_client.py  subsonic_player.py
src/rorqual/ui/: album_tree.py  playlist.py  util.py
src/subsonic/: subsonic_rest_api.py
subsonic/: __init__.py  subsonic_rest_api.py
