[project]
name = "rorqual"
version = "0.0.1"
description = "A TUI Subsonic client"
authors = [{ name = "Jan Buchar", email = "rorqual@bucharjan.cz" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.24.0,<0.25",
    "lxml>=4.9.2,<5",
    "more-itertools>=9.1.0,<10",
    "mpris-server>=0.9.6,<0.10",
    "mpv>=1.0.6,<2",
    "textual>=0.58.1,<0.59",
    "tomli>=2.0.1,<3",
    "typer>=0.7.0,<0.8",
    "rich>=13.3.5,<14",
    "xsdata~=22.12",
    "setproctitle>=1.3.2,<2",
    "platformdirs>=3.5.0,<4",
    "pydantic>=1.10.7,<2",
]

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "textual[dev]>=0.58.1,<0.59",
    "black>=23.3.0,<24",
    "isort>=5.12.0,<6",
    "git-cliff>=2.2.2,<3",
    "basedpyright>=1.28.4,<2",
]

[tool.isort]
line_length = 120
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
ignore = ["src/subsonic"]

[tool.hatch.build.targets.sdist]
include = [
    "src/rorqual",
    "src/subsonic",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/rorqual",
    "src/subsonic",
]

[tool.hatch.build.targets.wheel.sources]
"src/rorqual" = "rorqual"
"src/subsonic" = "subsonic"
