[project]
name = "rorqual"
version = "0.0.1"
description = "A TUI Subsonic client"
authors = [{ name = "Jan Buchar", email = "rorqual@bucharjan.cz" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.24.0,<0.25",
    "lxml>=5.3.2,<6",
    "more-itertools>=9.1.0,<10",
    "mpris-server>=0.9.6,<0.10",
    "mpv>=1.0.6,<2",
    "textual>=6.6.0,<7",
    "tomli>=2.0.1,<3",
    "typer>=0.20.0,<0.21",
    "rich>=14.2.0,<15",
    "xsdata~=24.12",
    "setproctitle>=1.3.2,<2",
    "platformdirs>=3.5.0,<4",
    "pydantic>=2,<3",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "textual[dev]>=6.6.0,<7",
    "git-cliff>=2.2.2,<3",
    "basedpyright>=1.28.4,<2",
    "ruff>=0.11.4",
    "xsdata[cli]>=24.12",
]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
ignore = ["src/subsonic"]

[tool.hatch.build.targets.sdist]
include = [
    "src/rorqual",
    "src/subsonic",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/rorqual",
    "src/subsonic",
]

[tool.hatch.build.targets.wheel.sources]
"src/rorqual" = "rorqual"
"src/subsonic" = "subsonic"
